# Vegetable-Image-Classification-CNN-TransferLearning-EfficientNetB0-LLM-Gemini-Streamlit

./: .env  README.md  Vegetable.ipynb  main.py  pyproject.toml
.streamlit/: config.toml  secrets.toml
app/: llm_chain.py  streamlit_app.py  utils.py  vegetable_facts.json
metrics/: classification_report.csv
