[project]
name = "vegetable-image-classification-cnn-transferlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keras==3.13.2",
    "langchain>=1.3.14",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "numpy>=2.4.6",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
    "tensorflow>=2.21.0",
]
